--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -793,9 +793,7 @@
     "    'Wage-Related Costs (RHC/FQHC)',\n",
     "    'Total Other Expenses',\n",
     "    'County',\n",
-    "    'Street Address',\n",
-    "    \"Less Contractual Allowance and Discounts on Patients' Accounts\"\n",
-    "]\n",
+    "    'Street Address']\n",
     "\n",
     "df.drop(columns=drop_vars, inplace=True)"
    ]
@@ -833,8 +831,6 @@
     "    'Wage Related Costs for Interns and Residents',\n",
     "    'Wage Related Costs for Part - A Teaching Physicians',\n",
     "    'Contract Labor: Direct Patient Care',\n",
-    "    'Wage-Related Costs (Core)',\n",
-    "    'Total Salaries (adjusted)',\n",
     "    # Program-specific variables\n",
     "    'Net Revenue from Stand-Alone CHIP',\n",
     "    'Stand-Alone CHIP Charges',\n",
@@ -903,7 +899,7 @@
    "outputs": [],
    "source": [
     "# Impute Values Based on Number of Beds Range - value has correlation with beds\n",
-    "salary_vars = [\n",
+    "vars_corr_beds = [\n",
     "    'Wage-Related Costs (Core)', \n",
     "    'Total Salaries (adjusted)', \n",
     "    'Inpatient Revenue', \n",
@@ -918,9 +914,10 @@
     "    'Total Fund Balances',\n",
     "    'Total Liabilities and Fund Balances',\n",
     "    'Total Assets',\n",
-    "    'Depreciation Cost'\n",
+    "    'Depreciation Cost',\n",
+    "    \"Less Contractual Allowance and Discounts on Patients' Accounts\",\n",
     "]\n",
-    "for col in salary_vars:\n",
+    "for col in vars_corr_beds:\n",
     "    df[col] = df.apply(lambda row: impute_in_beds_range(row, col), axis=1)    "
    ]
   },
@@ -1143,7 +1140,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b6c4e5db-a4f9-423f-b476-f48c3a8dde06",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": []
   },
